# backend

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/huddletalk-application/: Cargo.toml
crates/huddletalk-application/src/: lib.rs
crates/huddletalk-domain/: Cargo.toml
crates/huddletalk-domain/src/: lib.rs
crates/huddletalk-infrastructure/: Cargo.toml
crates/huddletalk-infrastructure/src/: lib.rs
src/: main.rs  sfu.rs  transcription.rs
