[package]
name = "huddletalk-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/huddletalk-application",
    "crates/huddletalk-domain",
    "crates/huddletalk-infrastructure",
]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
webrtc = "0.14"
huddletalk-application = { path = "crates/huddletalk-application", version = "0.1.0" }
huddletalk-domain = { path = "crates/huddletalk-domain", version = "0.1.0" }
huddletalk-infrastructure = { path = "crates/huddletalk-infrastructure", version = "0.1.0" }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
huddletalk-application = { workspace = true }
huddletalk-domain = { workspace = true }
huddletalk-infrastructure = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
debug = false
